--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -108,8 +108,11 @@ h1 {
 }
 button {
 	margin-top: 20px;
+	background-color:white;
+	border: 1px solid black;
+	padding: 1.5% 12%;
 }
-img {
+header img {
 	width:90%;
 }
 
@@ -117,7 +120,17 @@ img {
 .about{
 	display:flex;
 }
+.about2{
+	padding-right:1%;
+}
+
 
 /* Contact styling */
+#contact p {
+	margin: 2% 0;
+}
 
 /* Footer styling  */
+footer p {
+	text-align:center;
+}
